<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
<variable
    name="viewModel"
    type="com.esv.tripplanner.shared_ui.viewModels.PointOfInterestViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <EditText
            android:id="@+id/poiName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/PoinName"
            android:text="@={viewModel.poi.name}"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/poiDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:singleLine="false"
            android:hint="@string/PoiDescription"
            android:text="@={viewModel.poi.description}"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/poiName" />

        <EditText
            android:id="@+id/poiOpenTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:hint="@string/OpenTime"
            android:text="@={viewModel.openHoursAsText}"
            android:inputType="time"
            android:singleLine="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <EditText
            android:id="@+id/closeTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/CloseTime"
            android:text="@={viewModel.closeHoursAsText}"
            android:inputType="time"
            android:singleLine="false"
            app:layout_constraintBottom_toBottomOf="@+id/poiOpenTime"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/poiOpenTime"
            app:layout_constraintTop_toTopOf="@+id/poiOpenTime"
            app:layout_constraintVertical_bias="1.0" />

        <EditText
            android:id="@+id/latitude"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:hint="@string/latitude"
            android:text="@={viewModel.latitudeAsText}"
            android:inputType="numberDecimal"
            android:singleLine="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <EditText
            android:id="@+id/longitude"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/latitudeHint"
            android:inputType="numberDecimal"
            android:text="@={viewModel.longitudeAsText}"
            android:singleLine="false"
            app:layout_constraintBottom_toBottomOf="@+id/latitude"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/latitude"
            app:layout_constraintTop_toTopOf="@+id/latitude" />



        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/WorkingTime"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/poiDescription" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/GeoCoder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/poiOpenTime" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>